--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,13 @@
     "initializer_list": "cpp",
     "span": "cpp",
     "text_encoding": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "buffer": "cpp",
+    "executor": "cpp",
+    "net": "cpp",
+    "netfwd": "cpp",
+    "socket": "cpp",
+    "timer": "cpp",
+    "tuple": "cpp"
   }
 }
